fix on safari

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -12,6 +12,7 @@
 html, body {
   background-color: #121212;
   height: 100%;
+  min-height: 100vh;
 }
 
 body {
